--- a/src/app/MyComponents/todos/todos.component.html
+++ b/src/app/MyComponents/todos/todos.component.html
@@ -1,5 +1,5 @@
 <div class="  container me-auto ">
-    <h1 class=" mb-2 ">Welcome to Todo list</h1>
+    <h1 class=" mb-2 ">Todo list</h1>
     <br />
     
  
