--- a/src/app/MyComponents/add-todo/add-todo.component.html
+++ b/src/app/MyComponents/add-todo/add-todo.component.html
@@ -1,36 +1,29 @@
-<!-- <div class="my-3 ">
-  <h4>Add a Todo</h4>
-  <form (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="title">Todo Title</label>
-        <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" aria-describedby="emailHelp"> 
-      </div>
-      <div class="form-group">
-        <label for="desc">Todo Description</label>
-        <input type="text" class="form-control" name="desc" id="desc" [(ngModel)]="desc">
-      </div> 
-      <button type="submit" class="btn btn-sm btn-primary">Add Todo</button>
-    </form></div> -->
-
-
-    <div class="card " style="width: 38rem;">
+<div class="d-flex justify-content-center align-items-center" >
+  <div class="card" style="width: 100rem;">
+    <img src="assets/todo.png" class="card-img-top justify-content-center" alt="Card Image"  width="20" height="200">
       <div class="card-body">
-        <h5 class="card-title text-center">Add a Todo</h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">Add you task for the day</h6>
-        <br/>
-        <form (ngSubmit)="onSubmit()">
-          <div class="form-group">
-            <label for="title">Todo Title</label>
-            <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" aria-describedby="emailHelp"> 
-          </div>
+          <h5 class="card-title text-center">Add a Todo</h5>
           <br/>
-          <div class="form-group">
-            <label for="desc">Todo Description</label>
-            <input type="text" class="form-control" name="desc" id="desc" [(ngModel)]="desc">
-          </div> 
+          <h6 class="card-subtitle mb-2 text-body-secondary">Add your task for the day</h6>
           <br/>
-          <button type="submit" class="btn btn-sm btn-primary">Add Todo</button>
-        </form>
-        
+          <form (ngSubmit)="onSubmit()">
+              <div class="form-group">
+                  <label for="title">Todo Title</label>
+                  <input type="text" [(ngModel)]="title" class="form-control" id="title" name="title" aria-describedby="emailHelp"> 
+              </div>
+              <br/>
+              <div class="form-group">
+                  <label for="desc">Todo Description</label>
+                  <input type="text" class="form-control" name="desc" id="desc" [(ngModel)]="desc">
+              </div> 
+              <br/>
+              <button type="submit" class="btn btn-sm btn-primary">Add Todo</button>
+          </form>
       </div>
-    </div>
+  </div>
+
+  <div>
+    <button (click)="onClick()" id="rightButton" class="btn btn-sm btn-primary">Go back to Todo List</button>
+           
+  </div>
+</div>
