--- a/src/app/MyComponents/todos/todos.component.css
+++ b/src/app/MyComponents/todos/todos.component.css
@@ -24,3 +24,11 @@
     width: 500px; /* Adjust the width as needed */
     height: 300px; /* Adjust the height as needed */
 }
+
+.header {
+    display: flex; /* Use flexbox to arrange elements in a row */
+    justify-content: space-between; /* Add space between elements */
+    align-items: center; /* Vertically align elements in the center */
+    margin-bottom: 20px; /* Add space at the bottom for separation */
+    margin-top: 50px;
+}
