--- a/src/app/MyComponents/todos/todos.component.html
+++ b/src/app/MyComponents/todos/todos.component.html
@@ -1,25 +1,34 @@
 <div class="  container me-auto ">
-    <h1 class=" mb-2 ">Todo list</h1>
-    <br />
-    
- 
-    <app-add-todo (todoAdd)="addTodo($event)"></app-add-todo>
-
-    <br/>
-    <div>
-    <div *ngIf="this.todos.length===0; else elseBlock">
-        <h3>No Todos to display</h3>
+    <!-- <h1 class=" mb-2 ">Todo list</h1> -->
+    <div *ngIf="showCard; else elseBlock" >
+        <app-add-todo (todoAdd)="addTodo($event)" (showAddCard)="showCard=false"></app-add-todo>
+        <br />
     </div>
     <ng-template #elseBlock>
-        <h3>My Todos</h3>
-        <br /> 
-<div *ngFor="let todo of todos">
-            <app-todo-item [todo]="todo" (todoDelete)="deleteTodo($event)"
-                (todoCheckBox)="toggleTodo($event)"></app-todo-item>
+    <div>
+        <img src="assets/background.png" class="justify-content-center" alt="Card Image" width="100%" height="200" >
+    
+        <div *ngIf="this.todos.length===0; else elseBlock">
+            <h3>No Todos to display</h3>
         </div>
+        <ng-template #elseBlock>
+            
+            <div class="header">
+                
+                <h3>My Todos</h3>
+                <button (click)="showCard = true" class="btn btn-sm btn-primary">Add Todo</button>
+            </div>
+            <br />
+            <div *ngFor="let todo of todos">
+                <app-todo-item [todo]="todo" (todoDelete)="deleteTodo($event)"
+                    (todoCheckBox)="toggleTodo($event)"></app-todo-item>
+                    <br/>
+            </div>
 
+        </ng-template>
+
+    </div>
     </ng-template>
-
 </div>
 
 
@@ -82,5 +91,3 @@
         </div>
     </ng-template>
 </div>  -->
-
-
